<resources>
    <string name="app_name">p1tlgr</string>
    <string name="Titulo1">TECNOLOGICO DE ESTUDIOS SUPERIORES DEL ORIENTE DEL ESTADO DE MEXICO</string>
    <string name="Titulo2">INGENIERIA EN SISTEMAS COMPUTACIONALES</string>
    <string name="Titulo3">INTRODUCCION A APLICACIONES MOVILES</string>
    <string name="Titulo4">PROGRAMANDO MOVILES</string>
    <string name="Titulo5">VICTOR HUGO DE LA O MARTINEZ</string>
    <string name="Titulo6">TANIA LUCERO GUTIERREZ RANGEL</string>
    <string name="Titulo7">7S11</string>
    <string name="Titulo8">166010028</string>
</resources>
